Try to fix video autoplay on iOS. Use video controls and dynamically remove them

--- a/client/css/linkedtv.css
+++ b/client/css/linkedtv.css
@@ -244,9 +244,9 @@ a {
     height: 100%;
     position: absolute;
 }
-.player video::-webkit-media-controls {
+/*.player video::-webkit-media-controls {
     display:none !important;
-}
+}*/
 
 .player.explore,
 .player.lookup {
